# CyberStation_master

./: .gitignore  Cyber_master.qmlproject  Cyber_master.qrc
Cyber_master/: Constants.qml  qmldir
Cyber_master/designer/: plugin.metainfo
Cyber_masterContent/: App.qml  ComputerCard.qml  MainDashboard.ui.qml  PaymentPopup.qml  TimerPopup.qml
Python/: main.py  pyproject.toml
Python/autogen/: settings.py
Python/models/: computer.py  computer_list_model.py
