[tool.poetry]
name = "cyber-master"
version = "0.1.0"
description = "Cyber Cafe Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "cyber_master", from = "."}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.10.0"
pyside6-ds = "^4.6"
pydantic = "^2.12.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyside6-project]
files = ["main.py", "autogen/settings.py"]
